--- a/Project.ipynb
+++ b/Project.ipynb
@@ -5,9 +5,19 @@
    "id": "c5c33c25-5067-4214-a397-17548e3b67cd",
    "metadata": {},
    "source": [
-    "# Predicting Usage of a Video Game Research Server\n",
+    "# Predicting Player Subscription to a Video Game Related Newsletter\n",
     "\n",
-    "Frank Wood and his research group from UBC have collected data on the behaviours of various players in a Minecraft server. In particular, they have noted whether or not a player is subscribed to a game-related newsletter. This study aims to determine if played hours and the age of players can accurately predict whether players are subscribed to a game-related newsletter in Wood’s research Minecraft server through a K-Nearest Neighbor classification model."
+    "Frank Wood and his research group from UBC have collected data on the behaviours of various players in a Minecraft server. In particular, they have noted whether or not a player is subscribed to a game-related newsletter. This study aims to determine if played hours and the age of players can accurately predict whether players are subscribed to a game-related newsletter in Wood’s research Minecraft server through a K-Nearest Neighbor classification model. \n",
+    "\n",
+    "The data set that was used contains 7 variables:\n",
+    "- experience (character), which represents players' experience by one of the four choices: Pro, Veteran, Amateur, and Regular - subscribe (logical), which illustrates whether the player subscribed to a video game related newsletter by either True or False\n",
+    "- hashedEmail (character), which shows the players' email\n",
+    "- played_hours (double), which shows the number of hours played by the players with decimal points\n",
+    "- name (character), which demonstrates the player's name\n",
+    "- gender (character), which demonstrates the gender of the player as either Male or Female\n",
+    "- age (double), which shows the age of the players in whole numbers\n",
+    "\n",
+    "There are a total of 196 observations."
    ]
   },
   {
@@ -1429,6 +1439,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6efab272-1fd2-4517-a8b9-cba95c18cea6",
+   "metadata": {},
+   "source": [
+    "Figure 1: Scatter plot showing age of players against played hours"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ce9253e2-f2eb-463b-829d-426b926b251b",
    "metadata": {},
    "source": [
@@ -1965,6 +1983,14 @@
     "    theme(text = element_text(size = 12))\n",
     "\n",
     "accuracy_vs_k"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "334c72cb-3f70-4aa3-8a32-2c35d24611c4",
+   "metadata": {},
+   "source": [
+    "Figure 2: Line graph showing accuracy against number of neighbors"
    ]
   },
   {
@@ -2546,7 +2572,7 @@
    "metadata": {},
    "source": [
     "## Summary of Findings\n",
-    "With only an accuracy of 49% and a recall rate of 50%, we can conclude that playing hours and age are not strong predictors of whether or not a player is subscribed to a game-related newsletter. To evaluate the model's accuracy, we will compare it to a majority classifier, which in this case will also predict that a player is subscribed to a newsletter with an accuracy of 73%. Being 24% off by the majority classifier, it is easy to conclude that the model is not very accurate in predicting player subscription.\n",
+    "With only an accuracy of 49% and a recall rate of 50%, we can conclude that playing hours and age are not strong predictors of whether or not a player is subscribed to a game-related newsletter. This is not expected because it was expected that the more hours the players played, the more likely they were to be subscribed to a video game newsletter. To evaluate the model's accuracy, we will compare it to a majority classifier, which in this case will also predict that a player is subscribed to a newsletter with an accuracy of 73%. Being 24% off by the majority classifier, it is easy to conclude that the model is not very accurate in predicting player subscription.\n",
     "\n",
     "However, with a higher accuracy, the results may be of interest to the researchers during their outreach efforts by helping them understand what kind of players are being targeted if they decide to conduct recruitment through game-related newsletters."
    ]
